Added to the project a dynamic call for views using a base controller and dynamic call for files too.

--- a/ByteBank.Portal/ByteBank.Portal.csproj
+++ b/ByteBank.Portal/ByteBank.Portal.csproj
@@ -8,20 +8,22 @@
   <ItemGroup>
     <None Remove="Assets\css\styles.css" />
     <None Remove="Assets\js\main.js" />
-    <None Remove="View\Cambio\MXN.html" />
-    <None Remove="View\Cambio\USD.html" />
-    <None Remove="View\Cartoes\Credito.html" />
-    <None Remove="View\Cartoes\Debito.html" />
+    <None Remove="View\Exchange\Estimate.html" />
+    <None Remove="View\Exchange\MXN.html" />
+    <None Remove="View\Exchange\USD.html" />
+    <None Remove="View\Card\Credito.html" />
+    <None Remove="View\Card\Debito.html" />
     <None Remove="View\Home\Index.html" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assets\css\styles.css" />
     <EmbeddedResource Include="Assets\js\main.js" />
-    <EmbeddedResource Include="View\Cambio\MXN.html" />
-    <EmbeddedResource Include="View\Cambio\USD.html" />
-    <EmbeddedResource Include="View\Cartoes\Credito.html" />
-    <EmbeddedResource Include="View\Cartoes\Debito.html" />
+    <EmbeddedResource Include="View\Exchange\Estimate.html" />
+    <EmbeddedResource Include="View\Exchange\MXN.html" />
+    <EmbeddedResource Include="View\Exchange\USD.html" />
+    <EmbeddedResource Include="View\Card\Credito.html" />
+    <EmbeddedResource Include="View\Card\Debito.html" />
     <EmbeddedResource Include="View\Home\Index.html" />
   </ItemGroup>
 
